=== 0.8.56
* Added kiosk_enabled attribute to Lobbyist::V2::Company

=== 0.8.55
* Added Lobbyist::V2::DefaultTextMessageTemplate#list

=== 0.8.53
* Added Lobbyist::V2::CustomerCall.convert_to_email

=== 0.8.48
* added new field geocoding_enabled field in Lobbyist::V2::Company

=== 0.8.47
* added new field texting_grants to Lobbyist::V2::Promo table and Lobbyist::V2::CompanySubscription table
* added new field texting_enabled  to Lobbyist::V2::Company
* added summary for texting credits to Lobbyist::V2::CreditGrant

=== 0.8.46
* Fixed version bug

=== 0.8.45
* Added Lobbyist::V2::CreditGrant.summary

=== 0.8.43
* Added Lobbyist::V2::Company.text_unread_count.

=== 0.8.42
* Added Lobbyist::V2::Company.text_unread_count.

=== 0.8.41
* Added Lobbyist::V2::CommunicationCampaign.generate_preview.

=== 0.8.40
* Added Lobbyist::V2::ScottySetting.merge_contacts.

=== 0.8.39
* Added Lobbyist::V2::CommunicationCampaign.scheduled_at.

=== 0.8.38
* Added datadog metadata to http requests.

=== 0.8.37
* Changed version since code expected in 0.8.35 was not deployed due to conflicts during merge.

=== 0.8.36
* Added Lobbyist::V2::SkippedPayment for fetch the company skipped payments

=== 0.8.35
* Updated Lobbyist::V2::Review.bulk_update

=== 0.8.34
* Added Lobbyist::V2::Review.bulk_update

=== 0.8.33
* Added Lobbyist::V2::Company.free_postcard_credits_this_month

=== 0.8.32
* Added mail_dates attribute to Lobbyist::V2::CommunicationCampaign

=== 0.8.31
* Added Lobbyist::V2::CampaignChecklist for update api end point on checklist

=== 0.8.30
* Added Lobbyist::V2::MemberInsights.

=== 0.8.29
* Added Lobbyist::V2::SampleContact for sample contacts APIs

=== 0.8.28
* Added API end point destroy for FrontTemplates

=== 0.8.23
* Added API for listing zipcodes for a company

=== 0.8.22
* Prefixing global_campaign_setting #update params with required key

=== 0.8.21
* Added gmail_only field in Lobbyist::V2::SmartInviteSetting

=== 0.8.20
* Added explanation in Lobbyist::V2::Filter
